--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/CURRENCY_EXCHANGE
+spring.datasource.username=admin
+spring.datasource.password=admin
